calculatorsheetbeta.css
/* ... */
.effect-Darkness {
  color:#9e81b3;
  font-weight:bold;
}

.effect-Flame {
  color:#f6a881;
  font-weight:bold;
}

.effect-Sleep {
  color:#ffa8fe;
  font-weight:bold;
}

.effect-Freezing {
  color:#88c9ff;
  font-weight:bold;
}

.effect-Stun {
  color:#f6ff8b;
  font-weight:bold;
}

.effect-Inert {
  color:#ffffff;
  font-weight:bold;
}

.effect-Grab {
  color:#f091ff;
  font-weight:bold;
}

#miniAngle {
  display:inline-block;
  width:15px;
  height:15px;
  background-image:url(assets/trajectory/miniangle.png);
  position:absolute;
  top:18px;
  left:75px;
}

.colourselectbox {
  width:120px;
  height:180px;
  position:absolute;
  border:5px solid #383838;
  border-radius:3px;
  z-index:30;
}

.colourselect {
  width:40px;
  height:60px;
  display:inline-block;
  vertical-align: top;
  cursor:pointer;
  position:relative;
}


.colourselectReal {
  width:40px;
  height:60px;
  position:absolute;
  display:inline-block;
  top:0px;
  background-color:white;
  opacity:0;
}

.colourselectRealHighlight {
  opacity:0.2;
}

.minicolourbox {
  width:40px;
  height:20px;
}

#pagetitle {
  height:45px;
  padding:0;
  vertical-align: top;
  font-family:'Share Tech Mono', 'Ubuntu Mono', Consolas, "Courier New" ;
}

#homebutton {
  border-radius:5px;
  width:35px;
  height:35px;
  display:inline-block;
  margin:5px 10px;
  cursor:pointer;
}
.hometrans {
  opacity:0.5;
}
.homehighlight {
  opacity:1;
}

#mctitle {
  display:inline-block;
  height:45px;
  width:300px;
  position:relative;
}

#mctitletop {
  height:45px;
  position:absolute;
}

#mctitlebottom {
  height:45px;
  position:absolute;
}

#pagetitle h1 {
  display:inline-block;
  margin:1px 0px 0px 10px;
  vertical-align:top;
}

#credits {
  display:inline-block;
  font-style:italic;
  margin:32px 0 0 10px;
  vertical-align:top;
  font-size:10px;
}

#titlebarButtons {
  width:auto;
  height:45px;
  float:right;
  display:inline-block;
}

#tutorialbutton {
  height:35px;
  width:125px;
  color:white;
  display:inline-block;
  border-radius:5px;
  margin-top:5px;
  margin-left:15px;
  vertical-align:top;
  position:relative;
  cursor:pointer;
}

#tutorialbutton p {
  font-size:20px;
  margin:5px 5px;
  text-align:center;
  display:inline-block;
  vertical-align:top;
}

.tutorialbuttondefault {
  background-color:#497cff;
}

.tutorialbuttonhighlight {
  background-color:#6993ff;
}

#tutorialicon {
  display:inline-block;
  height:22px;
  width:18px;
  background-image:url(assets/trajectory/tuticon.png);
  border-radius:5px;
  margin:6px 0px 6px 5px;
}

#hotkeyContainer {
  height:45px;
  width:100px;
  display:inline-block;
  background-color: #ed5c48;
  position:relative;
  vertical-align: top;
  cursor:pointer;
}

#hotkeyContainerp {
  text-align:center;
  margin:0;
  padding:12px 7px;
  font-size:21px;
}

#hotkeys {
  position:absolute;
  top:45px;
  left:-165px;
  height:220px;
  width:430px;
  background-color:#ed5c48;
  z-index:250;
  border-radius:5px;
  display:none;
}

.hkrow {
  width:400px;
  height:40px;
  margin-left:10px;
}

#hk1strow {
  margin-top:8px;
}

#hk2ndrow {
  margin-left:20px;
}

#hk3rdrow {
  margin-left:30px;
}

#hk4throw {
  margin-left:42px;
}

.hotkey {
  display:inline-block;
  width:32px;
  height:32px;
  border:2px solid white;
  border-radius:5px;
  margin:2px;
}

.hotkey p {
  margin:0;
  padding:6px;
  text-align:center;
  font-size:19px;
}

.disabledhk {
  background-color:rgba(0, 0, 0, 0.5);
  opacity:0.25;
}

.activehk:hover {
  background-color:white;
  color:#ed5c48;
}

#hotkeyDescription {
  width:280px;
  height:40px;
  margin-left:10px;
}

#hotkeyDescriptionEdit {
  text-align: center;
  font-size:13px;
}

#arrowkeys {
  position:absolute;
  bottom:0px;
  right:0px;
  width:128px;
  height:85px;
}

#hk-up {
  margin:0px 42px 2px 42px;
  padding:
}

#volumeContainer {
  display:inline-block;
  height:45px;
  width:82px;
  background-color:#ff627a;
  vertical-align: top;
}

#soundicon {
  display:inline-block;
  height:45px;
  width:35px;
  background-image: url(assets/trajectory/soundiconbig.png);
  vertical-align: top;
}

#volumeLevel {
  display:inline-block;
  height:45px;
  width:22px;
  vertical-align: top;
  position:relative;
}

#volumeLevel p {
  text-align:left;
  font-size:30px;
  padding:7px 5px 5px 2px;
  margin:0;
}

#volumeButtonContainer {
  display:inline-block;
  width:25px;
  height:45px;
  vertical-align: top;
  background-color:#f7829b;
  position: relative;
}

.volumeButton {
  height:22px;
  width:25px;
  cursor:pointer;
}

.volumeButton p {
  font-size:25px;
  padding:5px;
  text-align: center;
  margin:0;
  position:relative;
  bottom:8px;
}

.volumeButton:hover {
  background-color:rgba(255, 255, 255, 0.18);
}

#donatebutton {
  height:35px;
  width:110px;
  color:white;
  display:inline-block;
  border-radius:5px;
  margin-top:5px;
  margin-right:20px;
  vertical-align:top;
  position:relative;
  cursor:pointer;
}

#donatebutton p {
  font-size:20px;
  margin:5px 0px;
  text-align:center;
  display:inline-block;
}

.donatebuttondefault {
  /*background-color:#52d750;*/
  background-color:#43c849;
}

.donatebuttonhighlight {
  background-color:#55df5b;
}

#dollarbox {
  width:27px;
  height:27px;
  border-radius:15px;
  background-color:#17a837;
  display:inline-block;
  margin:4px 5px 4px 5px;
}

#dollarbox p {
  text-align:center;
  margin:2px 0px 0px 8px;
  font-weight:bold;
}

#versionButtonContainer {
  width:140px;
  height:45px;
  display:inline-block;
  background-color:#d89aeb;
}

.verButton {
  width:70px;
  height:45px;
  background-color:#c151fc;
  cursor:pointer;
  display:inline-block;
  color:#FFFFFF;
  opacity:0.3;
  text-align:center;
}

.verButton p {
  margin:0;
  padding:12px 0px;
  font-size:23px;
}

.verButtonHighlight {
  opacity:0.7;
}

.verButtonOn {
  opacity:1;
}

/*.fP1 {
	fill:#FF0000;
}

.fPK1 {
  fill:#990000;
}

.fPnH1 {
  fill:#FF6666
}*/

.framePos-t {
  fill:transparent;
}

/*#kill1 {
  fill:#990000;
  stroke-width:0;
  stroke:#990000;
}*/
/* ... */

